// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-emotion with preact handles elements with no props 1`] = `
"Object {
  \\"__\\": null,
  \\"__b\\": 0,
  \\"__c\\": null,
  \\"__d\\": undefined,
  \\"__e\\": null,
  \\"__h\\": null,
  \\"__k\\": null,
  \\"__v\\": 3,
  \\"constructor\\": undefined,
  \\"key\\": undefined,
  \\"props\\": Object {},
  \\"ref\\": undefined,
  \\"type\\": \\"div\\",
}"
`;

exports[`jest-emotion with preact replaces class names and inserts styles into preact test component snapshots 1`] = `
"Object {
  \\"__\\": null,
  \\"__b\\": 0,
  \\"__c\\": null,
  \\"__d\\": undefined,
  \\"__e\\": null,
  \\"__h\\": null,
  \\"__k\\": null,
  \\"__v\\": 2,
  \\"constructor\\": undefined,
  \\"key\\": undefined,
  \\"props\\": Object {
    \\"children\\": Object {
      \\"__\\": null,
      \\"__b\\": 0,
      \\"__c\\": null,
      \\"__d\\": undefined,
      \\"__e\\": null,
      \\"__h\\": null,
      \\"__k\\": null,
      \\"__v\\": 1,
      \\"constructor\\": undefined,
      \\"key\\": undefined,
      \\"props\\": Object {
        \\"class\\": \\"css-ybrhvy\\",
      },
      \\"ref\\": undefined,
      \\"type\\": \\"svg\\",
    },
    \\"class\\": \\"css-17f3slo\\",
  },
  \\"ref\\": undefined,
  \\"type\\": \\"div\\",
}"
`;
